--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ aiosqlite>=0.19
 tenacity>=8.2
 pyyaml>=6.0.1
 prometheus_client>=0.20.0
+cryptography>=42.0
+pytest-asyncio>=0.21.0
+numpy>=2.1,<3
+
+# Phase 2d: Vector embeddings (optional for production use)
+# sentence-transformers>=2.2.0  # Uncomment for real embeddings
+# Falls back to deterministic hash-based embedder if not installed
