--- a/config/policy.yaml
+++ b/config/policy.yaml
@@ -20,3 +20,7 @@ safety:
     - impersonate_user
     - send messages without explicit approval
     - record audio/video without explicit approval
+indexing:
+  # Optional stricter rule: do not index memories marked encrypt: strong
+  # when this flag is enabled. Default: false (allows indexing encrypted content)
+  disallow_strong_only: false
