--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,12 @@ dependencies = [
     "tenacity>=8.2",
     "pyyaml>=6.0.1",
     "prometheus_client>=0.20.0",
+    "keyring>=24.0",
 ]
 
 [project.scripts]
 bartholomew = "bartholomew.cli:main"
+bartholomew-backfill-fts = "scripts.backfill_fts:main"
 
 [tool.uvicorn]
 factory = false
