chore: housekeeping - ruff config, safety.audit rule, gitattributes, CI updates
Note: previous 'style' commit added modules/tests/scripts; separating ongoing housekeeping from style-only changes.

- Updated pyproject.toml: temporarily ignore complexity rules (PLR0912/0915/0911) and B008
- Restored safety.audit rule in memory_rules.yaml under always_keep tier
- Added .gitattributes for consistent line endings across platforms
- Updated CI workflow to run pre-commit and smoke tests
- Fixed B904 exception handling in bartholomew/cli.py (add 'from e'/'from None')
- Installed pre-commit hooks locally for enforcement

--- a/bartholomew/config/memory_rules.yaml
+++ b/bartholomew/config/memory_rules.yaml
@@ -54,6 +54,14 @@ always_keep:
       recall_policy: always
       encrypt: strong
 
+  - match:
+      kind: safety.audit
+    metadata:
+      privacy_class: user.safety
+      recall_policy: always
+      summarize: false
+      encrypt: standard
+
 ask_before_store:
   - match:
       content: "(?i)(password|bank|account number|two-factor|auth code)"
