--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,12 +1,13 @@
-name: pre-commit
+name: pre-commit + smoke
 
 on:
-  pull_request:
   push:
-    branches: [ main, master ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  pre-commit:
+  lint-test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -17,16 +18,15 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
+          cache: pip
           cache-dependency-path: |
-            requirements.txt
             requirements-dev.txt
-      - name: Install dependencies
+            pyproject.toml
+      - name: Install deps
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt -r requirements.txt
-          pip install pre-commit pytest
+          python -m pip install -U pip
+          pip install -r requirements-dev.txt
       - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: pre-commit run --all-files --show-diff-on-failure
       - name: Run smoke tests
         run: pytest -q -m smoke
