Repo hygiene: Add .gitignore for brainstorm artifacts, relocate splitter, add validation script, commit canonical docs

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,10 @@ data/**/*.db
 .coverage
 htmlcov/
 .tox/
+
+# Brainstorm intermediate artifacts
+logs/brainstorm/chunks/
+logs/brainstorm/extracted/
+logs/brainstorm/merged/
+logs/brainstorm/*VERBATIM*.md
+logs/brainstorm/*INDEX*.md
